samples/_failures_safe/1761554769_e9a7e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ad072dc.c: In function ‘main’:
./samples/SAFE/__tmp_2ad072dc.c:137:16: error: missing terminating " character
  137 |         printf("2. Matrix
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_2ad072dc.c:137:9: error: expected expression at end of input
  137 |         printf("2. Matrix
      |         ^~~~~~
./samples/SAFE/__tmp_2ad072dc.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ad072dc.c:137:9: error: expected declaration or statement at end of input
